Fix task list numbering by wrapping content in flex div

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ ul, ul li {
 }
 .main{
   background-color:black;
+  font-family: 'Geneva';
 }
 .main h2{
   border: 3px solid yellow;
